--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<script src="https://www.paypal.com/sdk/js?client-id=ATzCffoi1iGtTxGyqbGzbubXsRhdrr1xinkHhPYvmS2RWCPui7rPZrqGAGxi_0s6sKYfLXHK-_k8pd6f&currency=USD"></script> 
+<!-- For PayPal -->
+
 <script type="text/javascript">
 /// some script
 
