--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -13,56 +13,57 @@
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title mb-4 text-center">Billing Address</h4>
-                    <form action="" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col form-group">
-                                <label for="" >First Name</label>
-                                <input type="text" name="first_name" class="form-control" required >
-                            </div>
-                            <div class="col form-group">
-                                <label for="" >Last Name</label>
-                                <input type="text" name="last_name" class="form-control" required >
-                            </div>
+            <form action="{% url 'place_order' %}" method="POST"> 
+                {% csrf_token %}
+                        
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="" >First Name</label>
+                            <input type="text" name="first_name" class="form-control" required >
                         </div>
-                        <div class="form-row">
-                            <div class="col form-group">
-                                <label for="" >Email</label>
-                                <input type="email" name="email" class="form-control" required >
-                            </div>
-                            <div class="col form-group">
-                                <label for="" >Phone Number</label>
-                                <input type="text" name="phone" class="form-control" required >
-                            </div>
+                        <div class="col form-group">
+                            <label for="" >Last Name</label>
+                            <input type="text" name="last_name" class="form-control" required >
                         </div>
-                        <div class="form-row">
-                            <div class="col form-group">
-                                <label for="" >Adress Line 1</label>
-                                <input type="text" name="adres_line_1" class="form-control" required >
-                            </div>
-                            <div class="col form-group">
-                                <label for="" >Adress Line 2</label>
-                                <input type="text" name="adress_line_2" class="form-control">
-                            </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="" >Email</label>
+                            <input type="email" name="email" class="form-control" required >
                         </div>
-                        <div class="form-row">
-                            <div class="col form-group">
-                                <label for="" >City</label>
-                                <input type="text" name="city" class="form-control" required >
-                            </div>
-                            <div class="col form-group">
-                                <label for="" >State</label>
-                                <input type="text" name="state" class="form-control">
-                            </div>
-                            <div class="col form-group">
-                                <label for="" >Country</label>
-                                <input type="text" name="country" class="form-control">
-                            </div>
+                        <div class="col form-group">
+                            <label for="" >Phone Number</label>
+                            <input type="text" name="phone" class="form-control" required >
                         </div>
-                        <div class="formm-row">
-                            <label for="">Order Note</label>
-                            <textarea name="order_note" id="" rows="2" class="form-control"></textarea>
+                    </div>
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="" >Address Line 1</label>
+                            <input type="text" name="address_line_1" class="form-control" required >
                         </div>
+                        <div class="col form-group">
+                            <label for="" >Address Line 2</label>
+                            <input type="text" name="address_line_2" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="" >City</label>
+                            <input type="text" name="city" class="form-control" required >
+                        </div>
+                        <div class="col form-group">
+                            <label for="" >State</label>
+                            <input type="text" name="state" class="form-control">
+                        </div>
+                        <div class="col form-group">
+                            <label for="" >Country</label>
+                            <input type="text" name="country" class="form-control">
+                        </div>
+                    </div>
+                    <div class="formm-row">
+                        <label for="">Order Note</label>
+                        <textarea name="order_note" id="" rows="2" class="form-control"></textarea>
+                    </div>
                       
                     
                 </div>
